cmake_minimum_required(VERSION 3.24)
project(Leetcode_2025)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode_2025 main_296.cpp main_2160.cpp main_3280.cpp main_729.cpp main_731.cpp main_732.cpp 双周赛147/main_01.cpp 双周赛147/main_03.cpp 双周赛147/main_02.cpp test.cpp 周赛431/main_01.cpp 周赛431/main_02.cpp 周赛431/main_03.cpp main_2241.cpp main_161.cpp main_2274.cpp main_3019.cpp main_2264.cpp main_3297.cpp main_3298.cpp main_3270.cpp)
